sc/source/filter/oox/workbookfragment.cxx
@@ -331,7 +331,7 @@ void WorkbookFragment::finalizeImport()
     if (bHardRecalc)
         pDocSh->DoHardRecalc(false);
     else
-        rDoc.CalcFormulaTree(false, false, false);
+        rDoc.CalcFormulaTree(false, true, false);
 }
 
 // private --------------------------------------------------------------------
